	- TODO: to add a pool ball projectile when you 'fire' the weapon
September 12th, 2022
	- Made Lucille shoot eight ball, but then it stops shooting normal spear projectile
	- TODO: fix spear :)
	- Okay so you can't make something shoot multiple projectiles using the method I'm using
	- eightball items are now unused
September 14th, 2022
	- Added moonlight_greatsword.png to Items
	- Began implimenting the Moonlight Greatsword
	- Added recipe for Moonlight Greatsword, Enchanted Sword, 12 Clorophyte Bars, at mythril anvil
	- Successfully implimented Moonlight Greatsword in basic form, does not shoot or glow yet...
	- missing assemblies error
	- see comments on lines 46 & 50 in MoonlightGreatsword.cs
September 16th, 2022
	- Glow still isn't working, MoonlightGreatsword_glow now not being used, trying dusts insted
	- Adding Dusts folder, and custom dust
	- Added ElectricDust file and png
	- Added dust effects to MoonlightGreatsword
	- TODO: add projectile to MoonlightGreatsword and improve lighting effects
September 19th, 2022
	- Started on adding moonlight projectile
	- TODO: Mess with values on moonlight projectile & moonlight sword to make projectile work better
September 21st, 2022
	- Adding values to moonlight projectile
	- Making projectile shoot from sword
	- Attempting to add dust trail to moonlight projectile
	- Added dust trail
	- changed main weapon dust to Clentaminator_Cyan
	- TODO: add explosion when the moonlight projectile hits block/npc
September 23rd, 2022
	- Added explosion when moonlight projectile hits
	- Moonlight Greatsword Fully Implimented!!!
	- Added Fireball.png and Fireball.cs
September 26, 2022
	- Added Fireball_Projectile.png and Fireball_Projectile.cs
September 28, 2022
	- Changing values on Fireball and Fireball_Projectile to finalize the item
	- Added Fireball_Projectile_Glowmask
September 30, 2022
	- made fireball glow! but it doesn't animate at the same time
	- TODO: make it glow AND animate
	- weird error, something is null?
